[package]
name = "rusqlite-vss"
version = "0.1.0"
edition = "2021"

[dependencies]
# rusqlite = { version = "0.31.0", features=["bundled"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
sqlite-vss = { version = "0.1.2", features = ["download-libs"] }
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
anyhow = "1.0.86"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"

env_logger = "0.11"
log = "0.4"
